# ping-pong

./: .gitignore  README.md  Report.txt  docker-compose.yml
ping-pong-backend/: Dockerfile  pyproject.toml
ping-pong-backend/ping-pong/configs/: settings.py  urls.py
ping-pong-backend/ping-pong/home/: apps.py  serializers.py  state.py  urls.py  views.py
ping-pong-backend/ping-pong/home/image_strategies/: base.py  large.py  medium.py  registry.py  small.py
ping-pong-backend/ping-pong/home/utils/: colors.py  positions.py
ping-pong-backend/ping-pong/ping/: urls.py  views.py
ping-pong-backend/ping-pong/pong/: urls.py  views.py
ping-pong-frontend/: Dockerfile  index.html  package-lock.json  package.json
ping-pong-frontend/src/: App.tsx  types.tsx
ping-pong-frontend/src/components/: ConfigForm.tsx  ImageCanvas.tsx  StatusBar.tsx
ping-pong-frontend/src/utils/: validateImage.ts
